--- a/main.css
+++ b/main.css
@@ -52,3 +52,18 @@ a:active {
     opacity: 0.3;
 }
 
+div.menu {
+    border: 7px solid;
+    border-radius: 5px;
+    width: 300px;
+    margin: 0 auto;
+}
+
+div.menu:hover {
+    background-color: rgb(196, 158, 164);
+    box-shadow: 0 0 15px #ff7777;
+}
+
+h1 {
+    text-align: center;
+}
