--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@ body {
 }
 
 main {
-    margin: 40px;
+    margin: 10px 20px 70px;
 }
 
 footer {
@@ -16,6 +16,10 @@ footer {
     font-size: 12pt; 
     font-style: italic; 
     text-align: right;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
 
 header {
